--- a/index.html
+++ b/index.html
@@ -344,13 +344,12 @@ before the last brace. TODO improve this ssave/load
 
 <button type="button" class="collapsible">Lastest most featured versions of C#, Processing, C++, JavaScript P5JS. All with benchmarks</button>
 <div class="content">
-  <a href="">Java Processing basic functionality, benchmark<br>
-  <a href="">Java Processing app with 3 separate fields, non-self-describing GUI: just parameters</a>  <img src="./processing/footer_colorFillGen_play_anim.png"><br><br>
-  <a href="">C# app, not feature rich, just implement basic functionality, benchmark</a> <br>
-  <a href="">C++ attempt</a> <br>
-  <a href="">python trial</a> <br>
-  <a href="">p5js java script. Basic functionality, benchmark</a> <br>
-  
+  <a href="https://github.com/pavel-b-kr12/jAnt_ColorFill">Java Processing basic functionality, benchmark<br>
+  <a href="https://github.com/pavel-b-kr12/jAnt_ColorFill">Java Processing app with 3 separate fields, non-self-describing GUI: just parameters</a>  <img src="./processing/footer_colorFillGen_play_anim.png"><br><br>
+  <a href="https://github.com/pavel-b-kr12/csAnt">C# app, not feature rich, just implement basic functionality, benchmark</a> <br>
+  <a href="ttps://github.com/pavel-b-kr12/cAnt_win32">C++ attempt</a> <br>
+  <a href="https://github.com/pavel-b-kr12/pyAnt">python trial</a> <br>
+  <a href="">p5js java script. Basic functionality, benchmark</a> ##TODO lnk<br>
 </div>
 
 <button type="button" class="collapsible" onclick="embedFit('embed_gallery','js/ants_gallery_js/index.htm')">playable gallery</button>
