--- a/index.html
+++ b/index.html
@@ -336,7 +336,8 @@ and
 	<pre>
 	};
 	</pre>
-before the last brace. TODO improve this ssave/load
+before the last brace. TODO improve this ssave/load<br>
+Select saved presets in the top of menu 🡆
 	</p>
 <br>
 <div id='embed_TjurmitsHQ'></div>
@@ -349,7 +350,7 @@ before the last brace. TODO improve this ssave/load
   <a href="https://github.com/pavel-b-kr12/csAnt">C# app, not feature rich, just implement basic functionality, benchmark</a> <br>
   <a href="ttps://github.com/pavel-b-kr12/cAnt_win32">C++ attempt</a> <br>
   <a href="https://github.com/pavel-b-kr12/pyAnt">python trial</a> <br>
-  <a href="">p5js java script. Basic functionality, benchmark</a> ##TODO lnk<br>
+  <a href="https://pavel-b-kr12.github.io/TjurmiteHQ_Langtons_ant_nest/js/p5js.htm"">p5js java script. Basic functionality, benchmark</a><br>TODO make main btn
 </div>
 
 <button type="button" class="collapsible" onclick="embedFit('embed_gallery','js/ants_gallery_js/index.htm')">playable gallery</button>
