--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@ TODO Examples of this chapter available in JS app, but need to link here.
 <br>
 <h4>0,1.</h4>
 Firstly I read about ant in Scientific American article 1989-11. There was described simple ants as in wiki article. It was easy for me to implement in BASIC language on paper.<br>
- Geting PC in 2001 i found the BASIC language outdated but Java Scrip was good, and still good after 20+ years. There was no canvas but good speed may be acheaved with Java embedded apps.
-
+ Geting PC in 2001 i found the BASIC language outdated but Java Script was good, and still good after 20+ years. There was no canvas but good speed could be achieved with Java embedded apps.
+<br><br>
 I was interested how ant behave on field that is not solid, but filled with some patterns. For example<br>
 rows battern [[b,b],[w,w]]<br>
 <button onclick="embed(this,'js/ants_gallery_htm/TODO.htm', 516,516); setInterval(function(){embedClear(this, 'run')}, 8000);">TODO</button><!-- 534,526 -->
@@ -313,9 +313,9 @@ checkers pattern [[b,w],[w,b]]<br>
 <h4>2. Playing with direction</h4>
 Basic ant can rotate in discrate steps and has 4 direction according to field 2D axis.
 It is easy to make 8 directions and move diagonally<br>
-<button onclick="embed(this,'js/ants_gallery_htm/TODO.htm', 516,516); setInterval(function(){embedClear(this, 'run')}, 8000);">TODO 8 dir ant</button>
-Bsic ant changes his direction by increment or decrement thatclassifyes him as relative direction ant. Next simple ant change direction to absolute numbers<br>
-<button onclick="embed(this,'js/ants_gallery_htm/TODO.htm', 516,516); setInterval(function(){embedClear(this, 'run')}, 8000);">TODO</button>
+<button onclick="embed(this,'js/ants_gallery_htm/ant0_8dir', 516,516); setInterval(function(){embedClear(this, 'run')}, 8000);">run</button>
+Bsic ant changes his direction by increment or decrement that classifyes him as relative direction ant. Next simple ant change direction to absolute numbers<br>
+<button onclick="embed(this,'js/ants_gallery_htm/ant0_abs.htm', 516,516); setInterval(function(){embedClear(this, 'run')}, 8000);">run</button>
 <br>
 And the Direction is simply a number, so it is possible to make it any and assign any action to this numbers<br>
 <button onclick="embed(this,'js/ants_gallery_htm/TODO.htm', 516,516); setInterval(function(){embedClear(this, 'run')}, 8000);">TODO 20 dir ant</button>
