--- a/index.html
+++ b/index.html
@@ -305,15 +305,19 @@ Firstly I read about ant in Scientific American article 1989-11. There was descr
 <br><br>
 I was interested how ant behave on field that is not solid, but filled with some patterns. For example<br>
 rows battern [[b,b],[w,w]]<br>
-<button onclick="embed(this,'js/ants_gallery_htm/TODO.htm', 516,516); setInterval(function(){embedClear(this, 'run')}, 8000);">TODO</button><!-- 534,526 -->
+<button onclick="embed(this,'js/ants_gallery_htm/ant0_fillRows.htm', 516,516); setInterval(function(){embedClear(this, 'run')}, 8000);">run</button><!-- 534,526 -->
 <br>
 checkers pattern [[b,w],[w,b]]<br>
-<button onclick="embed(this,'js/ants_gallery_htm/TODO.htm', 516,516); setInterval(function(){embedClear(this, 'run')}, 8000);">TODO</button>
-
+<button onclick="embed(this,'js/ants_gallery_htm/ant0_fillCheckers.htm', 516,516); setInterval(function(){embedClear(this, 'run')}, 8000);">run</button>
+<br>
+[[b,b],[b,w]]<br>
+<button onclick="embed(this,'js/ants_gallery_htm/ant0_fillGridMul.htm', 516,516); setInterval(function(){embedClear(this, 'run')}, 8000);">run</button>
+<br>
 <h4>2. Playing with direction</h4>
 Basic ant can rotate in discrate steps and has 4 direction according to field 2D axis.
 It is easy to make 8 directions and move diagonally<br>
-<button onclick="embed(this,'js/ants_gallery_htm/ant0_8dir', 516,516); setInterval(function(){embedClear(this, 'run')}, 8000);">run</button>
+<button onclick="embed(this,'js/ants_gallery_htm/ant0_8dir.htm', 516,516); setInterval(function(){embedClear(this, 'run')}, 8000);">run</button>
+<br>
 Bsic ant changes his direction by increment or decrement that classifyes him as relative direction ant. Next simple ant change direction to absolute numbers<br>
 <button onclick="embed(this,'js/ants_gallery_htm/ant0_abs.htm', 516,516); setInterval(function(){embedClear(this, 'run')}, 8000);">run</button>
 <br>
