--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@ a1) switch(Math.floor(dir))<br>
 a2) switch(~-dir)<br>
 <button onclick="embed(this,'js/ants_gallery_htm/ant0_floatDirFloor 11.htm', 516,516); setInterval(function(){embedClear(this, 'run')}, 8000);">run</button>
 <br>
-b) check intervals <pre>if(dir>0.12 && dir<0.6)</pre>
-<button onclick="embed(this,'js/ants_gallery_htm/TODO.htm', 516,516); setInterval(function(){embedClear(this, 'run')}, 8000);">TODO check intervals</button>
+b) check intervals <pre>if(dir>.. && dir<..)</pre>
+<button onclick="embed(this,'js/ants_gallery_htm/ant0_floatIfElse.htm', 516,516); setInterval(function(){embedClear(this, 'run')}, 8000);">run</button>
 <br>
 <br>
 
